# polaris-sdks

./: README.md
ai/: README.md  package-lock.json  package.json
ai/src/: index.ts
ai/src/tools/: _fetch.ts  polaris-analysts.ts  polaris-ask.ts  polaris-backtest.ts  polaris-brief.ts  polaris-candles.ts  polaris-commodities.ts  polaris-compare.ts  (+33 more)
crewai-polaris/: README.md  pyproject.toml
crewai-polaris/crewai_polaris/: __init__.py  tools.py
crewai-veroq/: README.md
cursor-plugin/: README.md
cursor-plugin/.cursor-plugin/: plugin.json
examples/: crypto-monitor.py  research-agent.ts  trading-bot.py
langchain/: README.md  pyproject.toml
langchain-veroq/: README.md
langchain/langchain_polaris/: __init__.py  tools.py
make/: app.json
make/connections/: apiKey.json
make/modules/: getForecast.json  newBrief.json  searchBriefs.json  verifyClaim.json  webSearch.json
n8n/: package-lock.json  package.json
n8n-veroq/: README.md  package.json
n8n/src/: index.ts
python/: README.md  pyproject.toml
python/langchain_polaris/: README.md  __init__.py  pyproject.toml  retrievers.py  tools.py
python/polaris_news/: __init__.py  cli.py  client.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: cli.ts  client.ts  index.ts  types.ts
veroq-ai/: README.md
veroq-cli/: package.json
veroq-python/: README.md  pyproject.toml
veroq-python/veroq/: __init__.py  client.py  shield.py
veroq-sdk/: README.md  package.json
veroq-sdk/src/: client.ts  index.ts  shield.ts
zapier/: authentication.js  index.js  package.json
(+3 files in other folders)
