[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-polaris"
version = "0.1.0"
description = "LangChain tools for Polaris Knowledge API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "The Polaris Report", email = "dev@thepolarisreport.com" },
]
keywords = ["langchain", "polaris", "news", "knowledge", "ai", "agents", "tools", "retriever"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "polaris-news>=0.6.0",
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://thepolarisreport.com"
Documentation = "https://thepolarisreport.com/docs"
Repository = "https://github.com/JohnnyTarrr/polaris-sdks"

[tool.hatch.build.targets.wheel]
packages = ["langchain_polaris"]

[tool.pytest.ini_options]
testpaths = ["tests"]
